# Secure_MPC

./: CMakeLists.txt  README.md
proto/: auth.proto  mta.proto
src/auth/: AuthService.cpp  AuthService.h
src/client/: main.cpp
src/common/: CryptoManager.cpp  CryptoManager.h  NetworkSession.cpp  NetworkSession.h
src/mta/: MTAService.cpp  MTAService.h
src/server/: main.cpp
